2009-09-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (replaceFirst, replaceAll):
        Fixup use of MULTILINE flag.
	* src/jacl/tcl/lang/RegexpCmd.java (cmdProc): Fixup
        support for -linestop and -lineanchor arguments to regexp.        
	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):  Fixup
        support for -linestop and -lineanchor arguments to regsub.
	* tests/tcl/regexp.test: Add missing test cases for
        -linestop and -lineanchor arguments.

2009-09-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (replaceFirst, replaceAll):
        Fixup support for the empty string as the string
        argument to regsub by removing the MULTILINE flag when
        an empty string is detected.
	* src/jacl/tcl/lang/RegexpCmd.java (cmdProc): Fixup
        support for empty string as string argument.
	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):
        Remove comments.
	* tests/tcl/regexp.test: Add additional test cases
        for regsub edge cases involving the empty string.

2009-09-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (parseSubSpec):
	Rewrite parseSubSpec to simplify and properly
	support Tcl escape chars and to escape Java
	regexp characters.
	* tests/tcl/regexp.test: Add simplified escape
	processing tests for regsub.

2009-09-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Regex.java (replaceFirst, parseSubSpec):
	Fixup comments, make logic more readable.
	Remove code block that replaced \ with \\ in replaceFirst.
	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):
	Add comments, rewrite block logic.
	* tests/tcl/regexp.test: Added simple regsub tests.

2009-09-19  Mo DeJong  <mdejong@users.sourceforge.net>

	Checkin reworked Java regexp module.

	* Makefile.in: Remove build rules for sunlabs classes.
	* src/jacl/sunlabs/brazil/util/regexp/Regexp.java: Removed
	* src/jacl/sunlabs/brazil/util/regexp/Regsub.java: Removed