@@ -1,9 +1,16 @@
+2009-09-30  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* src/jacl/tcl/lang/RegexpCmd.java (cmdProc): Rework
+        logic related to match result groups.
+	* tests/tcl/regexp.test: Add missing test cases for
+        non-capturing groups and -inline results.
+
 2009-09-26  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* src/jacl/tcl/lang/Regex.java (replaceFirst, replaceAll):
         Fixup use of MULTILINE flag.
 	* src/jacl/tcl/lang/RegexpCmd.java (cmdProc): Fixup
-        support for -linestop and -lineanchor arguments to regexp.        
+        support for -linestop and -lineanchor arguments to regexp.
 	* src/jacl/tcl/lang/RegsubCmd.java (cmdProc):  Fixup
         support for -linestop and -lineanchor arguments to regsub.
 	* tests/tcl/regexp.test: Add missing test cases for
